--- a/README
+++ b/README
@@ -1,6 +1,15 @@
 Usage: ./cheating_at_wordle.py [known letters] [rules] [alphabet]
-  First argument is the list of letters you already know
-  Rules are composed of [~][letter]:[position]. The optional tilde indicates a not. for example, a:5 means an 'A' in position 5. ~a:5 means no 'A' in position 5
-  Alphabet is a comma separated list of letters to exclude from the alphabet
-  Example:
-    ./cheating_at_wordle.py aec ~a:2 ~e:2 c:3 r,t,y,u,i,o,s,d,k,l,n,m
+
+First argument is the list of letters you already know
+Rules are composed of [~][letter]:[position]. The optional tilde indicates a not. for example, a:5 means an 'A' in position 5. ~a:5 means no 'A' in position 5
+Alphabet is a comma separated list of letters to exclude from the alphabet
+
+Example:
+	./cheating_at_wordle.py aec ~a:2 ~e:2 c:1 r,t,y,u,i,o,s,d,k,l,n,m,z,q,x,w,f,v,g,b,j
+
+	The letters A, E and C are known, 2 letters are not
+	Position 1 is a C
+	Position 2 is not an A or an E
+	The word does not contain any of r, t, y, u, i, o, s, d, k, l, n, m, z, q, x, w, f, v, g, b, or j
+
+	In this case, the most likely answer is CHEAP
